| Bug #28023 | NR can fail to update GCI | ||
|---|---|---|---|
| Submitted: | 23 Apr 2007 14:17 | Modified: | 30 Apr 2007 11:03 |
| Reporter: | Jonas Oreland | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | 5.1 | OS: | Any |
| Assigned to: | Jonas Oreland | Target Version: | |
[23 Apr 2007 14:17]
Jonas Oreland
[23 Apr 2007 14:20]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/25112 ChangeSet@1.2496, 2007-04-23 14:19:33+02:00, jonas@perch.ndb.mysql.com +1 -0 ndb - bug#28023 Add/sub correct offsets (with 2 word varpart ref)
[23 Apr 2007 14:23]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/25113 ChangeSet@1.2602, 2007-04-23 14:22:23+02:00, jonas@perch.ndb.mysql.com +1 -0 ndb - bug#28023 (51-main) Add/sub correct offsets (with 2 word varpart ref)
[23 Apr 2007 14:23]
Jonas Oreland
pushed to 51-ndb, 51-telco and telco-6.1
[23 Apr 2007 15:38]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/25117 ChangeSet@1.2463, 2007-04-23 15:38:06+02:00, jonas@perch.ndb.mysql.com +2 -0 ndb - add (auto) testcase for bug#28023
[28 Apr 2007 21:35]
Bugs System
Pushed into 5.1.18-beta
[30 Apr 2007 11:03]
Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.
If necessary, you can access the source repository and build the latest available version,
including the bug fix. More information about accessing the source trees is available at
http://dev.mysql.com/doc/en/installing-source.html
Documented bugfix in 5.1.18 changelog.
