ndb - bug#28023 (51-main)   Add/sub correct offsets (with 2 word varpart ref)